# optix_splats

./: .gitignore  CMakeLists.txt  README.md  environment.yml  main.cu  saxpy.cu  setup.py
CMake/: FindOptiX8.cmake  PTXUtilities.cmake
diff_gaussian_renderer/: __init__.py  render_init.py  renderer.cu
rtx/src/: kernels.cu
saxpy/: __init__.py  saxpy.cpp  saxpy_cuda.cu  saxpy_test.py
test/: load_gaussians.py  pygame_test.py  render_test.py  saxpy_unit_tests.py
